# ultimate_ai_labeller

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: dataset-structure-guide.md
example/gen1/: data.yaml
example/gen1/labels/: train.cache
example/gen1/labels/train/: frame_00021.txt  frame_00022.txt  frame_00023.txt  frame_00024.txt  frame_00025.txt  frame_00027.txt  frame_00028.txt  frame_00030.txt  frame_00032.txt  frame_00034.txt  frame_00035.txt  frame_00036.txt  frame_00037.txt  frame_00038.txt  frame_00039.txt  frame_00040.txt  frame_00042.txt  frame_00043.txt  frame_00044.txt  frame_00045.txt  frame_00046.txt  frame_00047.txt  frame_00049.txt  frame_00050.txt  frame_00051.txt  frame_00052.txt  frame_00053.txt  frame_00055.txt  frame_00058.txt  frame_00059.txt  frame_00060.txt  frame_00061.txt  frame_00062.txt  frame_00063.txt  frame_00064.txt  frame_00065.txt  frame_00066.txt  frame_00067.txt  frame_00068.txt  frame_00069.txt  (+880 more)
example/gen1/labels/val/: frame_00026.txt  frame_00029.txt  frame_00031.txt  frame_00033.txt  frame_00041.txt  frame_00048.txt  (+237 more)
src/ai_labeller/: app_all.py  app_detect.py  app_entry.py  app_label.py  cut_background_detect.py  detection_report_generator.py  main.py
src/ai_labeller/assets/: README.txt
src/ai_labeller/core/: __init__.py  commands.py  config.py  geometry.py  io_utils.py  logging_utils.py  models.py  types.py
src/ai_labeller/ui/: __init__.py  button_factory.py  monitor_bounds.py  window_pages.py
tests/: test_commands.py  test_geometry.py  test_io_utils.py
