[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "GeckoAI"
version = "0.1.13"
description = "AI Labelling tool for computer vision"
readme = "README.md"
authors = [{ name="James Chang", email="james2738999@gmail.com" }]
dependencies = [
    "pillow",
    "numpy",
    "opencv-python",
    "ultralytics",
    "paddleocr",
    "easyocr",
    "pandas",
    "openpyxl",
    "reportlab",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
# CLI commands
geckoai = "ai_labeller.app_all:main"
geckoai-all = "ai_labeller.app_all:main"
geckoai-label = "ai_labeller.app_label:main"
geckoai-detect = "ai_labeller.app_detect:main"
geckoai-report = "ai_labeller.detection_report_generator:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ai_labeller = ["models/*.pt", "assets/*.png", "assets/*.ico"]
